--- a/main.kv
+++ b/main.kv
@@ -69,7 +69,8 @@ ScreenManager:
                 pos_hint: {"center_x": .5, "center_y": .32}
 
                 MDTextField:
-                    id: user
+                    id: model_id
+                    text: app.API_KEY
                     text_color_focus: 0,0,0,1
                     color_mode: "custom"
                     mode: "fill"
