--- a/main.kv
+++ b/main.kv
@@ -20,7 +20,7 @@ ScreenManager:
         MDFloatLayout:
 
             MDLabel:
-                font_style: "H6"
+                font_style: "Button"
                 text: "Авторизация" if lang.active else "Authentication"
                 pos_hint: {"center_x": .5, "center_y": .6}
                 valign: 'middle'
