--- a/main.kv
+++ b/main.kv
@@ -9,27 +9,27 @@ ScreenManager:
             image3.anim_delay = -1
 
         MDFloatLayout:
-            size_hint_x: .5
-            size_hint_y: .5
+            size_hint_x: .75
+            size_hint_y: .75
             Image:
                 id: image1
                 source: "login.gif"
                 anim_delay: 1/24
-                pos_hint: {"x": .5, "y": 1}
+                pos_hint: {"x": .15, "y": .5}
 
         MDFloatLayout:
 
             MDLabel:
                 font_style: "Button"
                 text: "Авторизация" if lang.active else "Authentication"
-                pos_hint: {"center_x": .5, "center_y": .6}
+                pos_hint: {"center_x": .5, "center_y": .5}
                 valign: 'middle'
                 halign: 'center'
 
             MDFloatLayout:
                 size_hint_x: .95
                 size_hint_y: None
-                pos_hint: {"center_x": .5, "center_y": .53}
+                pos_hint: {"center_x": .5, "center_y": .42}
 
                 MDTextField:
                     id: user
@@ -47,7 +47,7 @@ ScreenManager:
             MDFloatLayout:
                 size_hint_x: .95
                 size_hint_y: None
-                pos_hint: {"center_x": .5, "center_y": .425}
+                pos_hint: {"center_x": .5, "center_y": .315}
 
                 MDTextField:
                     id: password
@@ -59,25 +59,6 @@ ScreenManager:
                     size_hint_x: 1
                     size_hint_y: None
                     icon_right: "key"
-                    pos_hint: {"center_x": .5, "center_y": .5}
-                    height: self.minimum_height
-                    multiline: False
-
-            MDFloatLayout:
-                size_hint_x: .95
-                size_hint_y: None
-                pos_hint: {"center_x": .5, "center_y": .32}
-
-                MDTextField:
-                    id: model_id
-                    text: app.API_KEY
-                    text_color_focus: 0,0,0,1
-                    color_mode: "custom"
-                    mode: "fill"
-                    hint_text: "Идентификатор модели" if lang.active else "Model ID"
-                    size_hint_x: 1
-                    size_hint_y: None
-                    icon_right: "connection"
                     pos_hint: {"center_x": .5, "center_y": .5}
                     height: self.minimum_height
                     multiline: False
@@ -121,6 +102,87 @@ ScreenManager:
                 size_hint_y: None
                 font_style: "Button"
                 text: "Вход" if lang.active else "Login"
+                pos_hint: {"center_x": .75, "center_y": .05}
+                md_bg_color: (138.0/255.0,161.0/255.0,107.0/255.0,.5)
+                on_press:
+                    root.transition.direction = 'right'
+                    root.current = 'model_login'
+
+    MDScreen:
+        name: 'model_login'
+        md_bg_color: app.theme_cls.bg_light
+
+        MDFloatLayout:
+            size_hint_x: .75
+            size_hint_y: .75
+            Image:
+                id: image1
+                source: "login.gif"
+                anim_delay: 1/24
+                pos_hint: {"x": .15, "y": .5}
+
+        MDFloatLayout:
+
+            MDLabel:
+                font_style: "Button"
+                text: "Настройки модели" if lang.active else "Model settings"
+                pos_hint: {"center_x": .5, "center_y": .5}
+                valign: 'middle'
+                halign: 'center'
+
+            MDFloatLayout:
+                size_hint_x: .95
+                size_hint_y: None
+                pos_hint: {"center_x": .5, "center_y": .42}
+
+                MDTextField:
+                    id: id_model
+                    text: app.model_id
+                    text_color_focus: 0,0,0,1
+                    color_mode: "custom"
+                    mode: "fill"
+                    hint_text: "Идентификатор" if lang.active else "ID"
+                    size_hint_x: 1
+                    size_hint_y: None
+                    icon_right: "connection"
+                    pos_hint: {"center_x": .5, "center_y": .5}
+                    height: self.minimum_height
+                    multiline: False
+
+            MDFloatLayout:
+                size_hint_x: .95
+                size_hint_y: None
+                pos_hint: {"center_x": .5, "center_y": .315}
+
+                MDTextField:
+                    id: key_model
+                    text: app.API_KEY
+                    text_color_focus: 0,0,0,1
+                    color_mode: "custom"
+                    mode: "fill"
+                    hint_text: "API ключ" if lang.active else "API key"
+                    password: True
+                    size_hint_x: 1
+                    size_hint_y: None
+                    icon_right: "key"
+                    pos_hint: {"center_x": .5, "center_y": .5}
+                    height: self.minimum_height
+                    multiline: False
+
+            MDFillRoundFlatButton:
+                size_hint_x: .5
+                size_hint_y: None
+                font_style: "Button"
+                text: "Назад" if lang.active else "Back"
+                pos_hint: {"center_x": .25, "center_y": .05}
+                md_bg_color: (138.0/255.0,161.0/255.0,107.0/255.0,.5)
+                on_press: root.current = 'login'
+
+            MDFillRoundFlatButton:
+                size_hint_x: .5
+                size_hint_y: None
+                font_style: "Button"
+                text: "Далее" if lang.active else "Next"
                 pos_hint: {"center_x": .75, "center_y": .05}
                 md_bg_color: (138.0/255.0,161.0/255.0,107.0/255.0,.5)
                 on_press:
@@ -305,7 +367,7 @@ ScreenManager:
                         md_bg_color: (138.0/255.0,161.0/255.0,107.0/255.0,.5)
                         on_press:
                             root.transition.direction = 'right'
-                            root.current = 'login'
+                            root.current = 'model_login'
 
                     MDFillRoundFlatButton:
                         font_style: "Button"
