--- a/main.kv
+++ b/main.kv
@@ -106,7 +106,8 @@ ScreenManager:
                 md_bg_color: (138.0/255.0,161.0/255.0,107.0/255.0,.5)
                 on_press:
                     root.transition.direction = 'right'
-                    root.current = 'model_login'
+                    #root.current = 'model_login'
+                    app.authorization()
 
     MDScreen:
         name: 'model_login'
@@ -185,9 +186,7 @@ ScreenManager:
                 text: "Далее" if lang.active else "Next"
                 pos_hint: {"center_x": .75, "center_y": .05}
                 md_bg_color: (138.0/255.0,161.0/255.0,107.0/255.0,.5)
-                on_press:
-                    root.transition.direction = 'right'
-                    app.start()
+                on_press: app.start()
 
     MDScreen:
         name: 'manual_load'
