--- a/main.kv
+++ b/main.kv
@@ -142,6 +142,7 @@ ScreenManager:
                     color_mode: "custom"
                     mode: "fill"
                     hint_text: "Идентификатор" if lang.active else "ID"
+                    password: True
                     size_hint_x: 1
                     size_hint_y: None
                     icon_right: "connection"
