--- a/main.kv
+++ b/main.kv
@@ -199,7 +199,7 @@ ScreenManager:
             halign: 'center'
             pos_hint: {"center_x": .5, "center_y": .9}
 
-        MDFillRoundFlatIconButton:
+        MDFillRoundFlatButton:
             font_style: "Button"
             icon: "file"
             text: "Открыть файловый менеджер" if lang.active else "Open manager"
